[package]
name = "flame"
version = "0.1.0"
authors = ["Yota Toyama <raviqqe@gmail.com>"]

[dependencies]
array-queue = "0.2"
docopt = "0.8"
futures-await = { git = "https://github.com/alexcrichton/futures-await" }
futures-black-hole = "0.2"
futures-cpupool = "0.1"
hamt-sync = "0.2"
lazy_static = "1"
pest = "1"
pest_derive = "1"
serde = "1"
serde_derive = "1"
