[package]
name = "flame"
version = "0.1.0"
authors = ["Yota Toyama <raviqqe@gmail.com>"]

[dependencies]
array-queue = "0.3"
docopt = "0.8"
futures-await = "0.2.0-alpha"
futures-stable = "0.2.0-alpha"
hamt-sync = "0.2"
lazy_static = "1"
pest = "1"
pest_derive = "1"
pin-api = "0.1"
serde = "1"
serde_derive = "1"
