[package]
name = "flame"
version = "0.1.0"
authors = ["Yota Toyama <raviqqe@gmail.com>"]

[dependencies]
array-queue = "0.3"
docopt = "0.8"
futures = { git = "https://github.com/rust-lang-nursery/futures-rs", features = ["nightly"] }
hamt-sync = "0.2"
lazy_static = "1"
pest = "1"
pest_derive = "1"
serde = "1"
serde_derive = "1"
